can shorten filenames in file tree
can shorten filenames in file tree by a set delimiter